--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	
 	<a href="teknologi.html">
 		<div>
-			Kompetansemål Teknologiforståelse 
+			Teknologiforståelse 
 		</div>
 	</a>
 	
 	<a href="konseptutvikling.html">
 		<div>
-			Kompetansemål Konseptutikling og programmering
+			Konseptutikling og programmering
 		</div>
 	</a>
 	<h1 onclick="innerHTML='Lengre og mer utførlig overskrift'">Kort overskrift</h1>
