--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Untitled Document</title>
+	<title>Hjem</title>
 	<link rel="stylesheet" href="resources/css/index.css">
 <script src="resources/js/myscript.js"></script>
 </head>
