--- a/teknologi.html
+++ b/teknologi.html
@@ -7,6 +7,12 @@
 
 <body>
 	<h1>Teknologiforståelse</h1>
+	<ul> 
+		<li> Personvern </li>
+		<li> Personopplysningsloven </li>
+		<li> Datatilsynet </li>
+
+	</ul>
 	
 </body>
 </html>
