--- a/teknologi.html
+++ b/teknologi.html
@@ -8,8 +8,8 @@
 <body>
 	<h1>Teknologiforståelse</h1>
 	<ul> 
-		<li> Personvern </li>
-		<li> Personopplysningsloven </li>
+		<li> <a href="">Personvern </a></li>
+		<li> <a href=""> Personopplysningsloven </a></li>
 		<li> Datatilsynet </li>
 
 	</ul>
