--- a/teknologi.html
+++ b/teknologi.html
@@ -10,7 +10,7 @@
 	<ul> 
 		<li> <a href="">Personvern </a></li>
 		<li> <a href=""> Personopplysningsloven </a></li>
-		<li> Datatilsynet </li>
+		<li> <a href="https://www.datatilsynet.no/">Datatilsynet (ekstern lenke)</a> </li>
 
 	</ul>
 	
