Added styling and menu

--- a/index.html
+++ b/index.html
@@ -4,20 +4,31 @@
 	<meta charset="utf-8">
 	<title>Hjem</title>
 	<link rel="stylesheet" href="resources/css/index.css">
+	<link rel="stylesheet" href="resources/css/main.css">
 <script src="resources/js/myscript.js"></script>
+
 </head>
 
 <body>
-	<h1 onClick="style='background:yellow'" id="myFirstHeader">Dette er min nettside</h1>
+	<div class="scrollmenu">
+  		<a href="index.html">Hjem</a>
+  		<a href="teknologi.html">Teknologiforståelse</a>
+		<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
+  		<a href="#contact">YFF</a>
+  		<a href="#about">Kontakt meg</a>
+  
+	</div>
+	
+	<h1 onClick="style='background:yellow'">Dette er min nettside</h1>
 	
 	<a href="teknologi.html">
-		<div>
+		<div class="box">
 			Teknologiforståelse 
 		</div>
 	</a>
 	
 	<a href="konseptutvikling.html">
-		<div>
+		<div class="box">
 			Konseptutikling og programmering
 		</div>
 	</a>
