--- a/konseptutvikling.html
+++ b/konseptutvikling.html
@@ -2,10 +2,21 @@
 <html>
 <head>
 <meta charset="utf-8">
+		<link rel="stylesheet" href="resources/css/main.css">
+
 <title>Konseptutvikling og programmering</title>
 </head>
 
 <body>
+	<div class="scrollmenu">
+  		<a href="index.html">Hjem</a>
+  		<a href="teknologi.html">Teknologiforståelse</a>
+		<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
+  		<a href="#contact">YFF</a>
+  		<a href="#about">Kontakt meg</a>
+  
+	</div>
+	
 	<h1>Konseptutvikling og programmering</h1>
 </body>
 </html>
