--- a/teknologi.html
+++ b/teknologi.html
@@ -2,11 +2,27 @@
 <html>
 <head>
 <meta charset="utf-8">
+	<link rel="stylesheet" href="resources/css/main.css">
 <title>Teknologiforståelse</title>
+		<style>
+
+			
+</style>
 </head>
 
 <body>
+	<div class="scrollmenu">
+  		<a href="index.html">Hjem</a>
+  		<a href="teknologi.html">Teknologiforståelse</a>
+		<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
+  		<a href="#contact">YFF</a>
+  		<a href="#about">Kontakt meg</a>
+  
+	</div>
 	<h1>Teknologiforståelse</h1>
+	
+	
+	
 	<ul> 
 		<li> <a href="">Personvern </a></li>
 		<li> <a href=""> Personopplysningsloven </a></li>
