Added more pages and styling

--- a/teknologi.html
+++ b/teknologi.html
@@ -12,23 +12,52 @@
 
 <body>
 	<div class="scrollmenu">
-  		<a href="index.html">Hjem</a>
+  		<a href="index.html">Heim</a>
   		<a href="teknologi.html">Teknologiforståelse</a>
 		<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
   		<a href="#contact">YFF</a>
-  		<a href="#about">Kontakt meg</a>
+  		<a href="contact.html">Kontakt meg</a>
   
 	</div>
-	<h1>Teknologiforståelse</h1>
-	
-	
-	
-	<ul> 
-		<li> <a href="">Personvern </a></li>
-		<li> <a href=""> Personopplysningsloven </a></li>
-		<li> <a href="https://www.datatilsynet.no/" target="_blank">Datatilsynet (ekstern lenke)</a> </li>
+	<div class="container">
+		<h1>Teknologiforståelse</h1>
+		<ul> 
+			<li> <a href="#personvern">1 Personvern </a></li>
+			<li> <a href="#personloven">2 Personopplysningsloven </a></li>
+			<li> <a href="https://www.datatilsynet.no/" target="_blank">Datatilsynet (ekstern lenke)</a> </li>
+		</ul>
+	</div>
+	<div class="grid-container">
+		<div class="container-8">
+			<h1>Emner i faget:</h1>
+			<h1>Regelverk og etikk</h1>
+			<h2 id="personvern">Personvern</h2>
+			<p>Vi har alle rett til privatliv og kontroll over egne personopplysninger. Disse rettighetene er nedfelt i Grunnloven, menneskerettskonvensjonen og EUs personvernforordning (GDPR). Innen IT- og medie-feltet håndterer vi andres personopplysninger. Da må vi ha god styring på hva som er lov og ikke.
+				</p>
+			<h2 id="personloven">Personopplysningsloven</h2>
+			<p>Personopplysningsloven er den viktigste loven om personvern i Norge. I den står reglene for hva det er lov til å registrere om privatpersoner, og hvordan personopplysninger skal behandles.
 
-	</ul>
+</p>
+		</div>
+		<div class="container-4">
+			<h2>Kompetansemål etter teknologiforståelse:</h2>
+			<p>Mål for opplæringen er at eleven skal kunne </p>
+			<ul>
+				<li> planlegge og gjennomføre sanntidsproduksjoner</li>
+				<li>reflektere over og beskrive hvordan media <br> påvirker mennesker og deres medievaner</li>
+				<li>kjenne til og anvende bransjefaglige metoder <br> og relevant utstyr i produksjon</li>
+				<li>beskrive, utforske og konfigurere datanettverk <br> med egne subnett</li>
+				<li>administrere brukerenheter og koble dem <br> til sentrale administrasjonsplattformer</li>
+				<li>utforske og beskrive hvordan teknologi kan <br> formidle nye uttrykk og gi nye opplevelser</li>
+				<li>gjøre rede for hvordan hensynet til bærekraft <br> påvirker anskaffelse, drift og avhending av utstyr og materiell</li>
+				<li>gjennomføre og dokumentere arbeid i tråd med  <br>gjeldende bestemmelser for helse, miljø og sikkerhet</li>
+				<li>gjøre rede for hvordan internett fungerer, <br> og hvordan det blir brukt til kommunikasjon og lagring</li>
+				<li>utforske og beskrive digitale trusler, <br> verdier og sårbarheter i samfunnet</li>
+				<li>gjøre rede for hvordan man behandler informasjon <br> og personopplysninger i tråd med gjeldende regelverk</li>
+				<li>vurdere, anbefale og kvalitetssikre tiltak som <br> reduserer risiko for uønsket spredning av data</li>
+			</ul>
+		</div>
+	</div>
 	
 </body>
 </html>
