--- a/konseptutvikling.html
+++ b/konseptutvikling.html
@@ -9,14 +9,27 @@
 
 <body>
 	<div class="scrollmenu">
-  		<a href="index.html">Hjem</a>
+  		<a href="index.html">Heim</a>
   		<a href="teknologi.html">Teknologiforståelse</a>
 		<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
   		<a href="#contact">YFF</a>
-  		<a href="#about">Kontakt meg</a>
+  		<a href="contact.html">Kontakt meg</a>
   
 	</div>
 	
-	<h1>Konseptutvikling og programmering</h1>
+	<div class="container">
+		<h1>Konseptutvikling og programmering</h1>
+		<ul> 
+			
+		</ul>
+	</div>
+	<div class="grid-container">
+		<div class="container-8">
+			<h2>Kva er det ein skal lære i dette faget?	 </h2>
+		</div>
+		<div class="container-4">
+			<h2>Kompetansemål:</h2>
+		</div>
+	</div>
 </body>
 </html>
