added files and folders

--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-"Hello World" 
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Heim</title>
+	<link rel="stylesheet" href="resources/css/index.css">
+	<link rel="stylesheet" href="resources/css/main.css">
+<script src="resources/js/myscript.js"></script>
+
+</head>
+
+<body>
+	<div class="scrollmenu">
+  		<a href="index.html">Heim</a>
+  		<a href="teknologi.html">Teknologiforståelse</a>
+		<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
+  		<a href="#contact">YFF</a>
+  		<a href="contact.html">Kontakt meg</a>
+  
+	</div>
+	<div class="container">
+		<h1>Dette er Stine si nettside</h1>
+		<p>Her vil du finne litt forskjellig informasjon om fagene på linja Informasjonsteknologi og medieproduksjon. </p>
+	</div>
+	
+	<a href="teknologi.html">
+			<div class="box">
+				Teknologiforståelse 
+			</div>
+		</a>
+	
+		<a href="konseptutvikling.html">
+			<div class="box">
+				Konseptutikling og programmering
+			</div>
+		</a>
+		<a href="yff.html">
+			<div class="box" style="margin-right: 0px;">
+				YFF
+			</div>
+		</a>
+	
+</body>
+</html>
