--- a/teknologi.html
+++ b/teknologi.html
@@ -42,7 +42,7 @@
 			<p>Personopplysningsloven er den viktigste loven om personvern i Norge. I den står reglene for hva det er lov til å registrere om privatpersoner, og hvordan personopplysninger skal behandles.
 
 			</p>
-			<p style="float:right; font-style: italic;">Kilder: <a href="https://ndla.no/subjects/subject:f248e20c-3131-495e-a759-c71678430d5f/topic:0cf1272e-a133-403b-89d2-082246cafc7a/?filters=urn:filter:81b3892a-78e7-4e43-bc31-fd5f8a5090e7">NDLA.no</a></p>
+			<p style="text-align: right; font-style: italic;">Kilder: <a href="https://ndla.no/subjects/subject:f248e20c-3131-495e-a759-c71678430d5f/topic:0cf1272e-a133-403b-89d2-082246cafc7a/?filters=urn:filter:81b3892a-78e7-4e43-bc31-fd5f8a5090e7">NDLA.no</a></p>
 		</div>
 	</div>
 		<div >
