--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,8 @@
 			<li>Mobil: <a href="tel:+4740478559">+47 40478559</a></li>
 		</ul>
 	</div>
-	
+	<footer>
+		<p>&#169; 2020 Stine Jonassen Føyen </p>
+	</footer>
 </body>
 </html>
