--- a/konseptutvikling.html
+++ b/konseptutvikling.html
@@ -19,17 +19,103 @@
 	
 	<div class="container">
 		<h1>Konseptutvikling og programmering</h1>
-		<ul> 
-			
-		</ul>
-	</div>
+	
+	
 	<div class="grid-container">
-		<div class="container-8">
-			<h2>Kva er det ein skal lære i dette faget?	 </h2>
+		<div class="grid-item">
+			<ul> 
+				<li> <a href="#regelverk"></a></li>
+					<ul>
+						<li> <a href="#personvern"></a></li>
+						<li> <a href="#personloven"> </a></li>
+						<li> <a href="https://www.datatilsynet.no/" target="_blank"></a> </li>
+					</ul>
+				
+			</ul>
 		</div>
-		<div class="container-4">
-			<h2>Kompetansemål:</h2>
+		<div class="grid-item">
+			<ul> 
+				<li> <a href="#regelverk"></a></li>
+					<ul>
+						<li> <a href="#personvern"></a></li>
+						<li> <a href="#personloven"> </a></li>
+						<li> <a href="https://www.datatilsynet.no/" target="_blank"></a> </li>
+					</ul>
+				
+			</ul>
 		</div>
+	
+		
 	</div>
+	  </div>
+	
+		
+
+	
+</div>
+<div class="grid-container">
+	<div>
+	<div>
+		<h2 class="headercontainer">Emner i faget:</h2>			
+
+	</div>
+	<div class="container-8" style="border: 1px solid rgb(229, 228, 225); color: #353533;">
+		<h1 id="webutvikling">Webutvikling</h1>
+		<p>World Wide Web er i dag en sentral kommunikasjonsflate for oss. Åpne oppmerkingsspråk og uttalige verktøy gir oss fleksibilitet til å lage tilpassede og unike nettsider og tjenester. Felles standarder sikrer at nettsidene og innholdet er lett tilgjengelig for alle i verden med nettilgang.
+			</p>
+		<h1>Regelverk og etikk</h1>
+		<p>Vi som arbeider innen IT eller media, må være profesjonelle og følge gjeldende lovverk og bransjens etiske normer. Vi har våre egne rettigheter, men også plikter vi må følge. Det er mye å holde orden på. Heldigvis er det mange tilgjengelige ressurser som kan hjelpe oss å forstå lovverket og normene.</p>
+		<h1>Brukerstøtte</h1>
+		<p>Brukerstøtte fokuserer ofte på IT, men kan også omfatte annen støtte ansatte eller brukere trenger for å kunne utføre arbeidsoppgavene sine. De fleste bedrifter har en brukerstøtte. Avhengig av størrelsen på bedriften vil brukerstøtten settes opp på forskjellige måter og driftes forskjellig.
+		</p>
+		<h1>Programmering</h1>
+		<p>Datasystemer gir oss uante muligheter, men de må instrueres slik at de gjør det vi vil de skal gjøre. Kunnskap om programmering lar deg ta styringen over systemene så de gjør oppgavene du ønsker.
+		</p>
+		<h1>Dokumentasjon</h1>
+		<p>Å huske detaljer er ofte vanskeligere enn vi tror, spesielt når det har gått litt tid. Dokumentasjon handler om å beskrive hva du har gjort, og hva du planlegger. Spesielt viktig er dette når vi jobber for andre eller jobber i team eller prosjekter.
+		</p>
+		<p style="text-align: right; font-style: italic;">Kilder: <a href="https://ndla.no/subjects/subject:f248e20c-3131-495e-a759-c71678430d5f/topic:0cf1272e-a133-403b-89d2-082246cafc7a/?filters=urn:filter:81b3892a-78e7-4e43-bc31-fd5f8a5090e7">NDLA.no</a></p>
+	</div>
+</div>
+	<div >
+		<div>
+			<h2 class="headercontainer">Kompetansemål</h2>
+
+		</div>
+		<div class="container-4" style=" border: 1px solid rgb(229, 228, 225); color:#353533; ">
+
+				<h3>Mål for opplæringen er at eleven skal kunne </h3>
+				<ul>
+					<li> anvende regelverk for bruk og formidling av innhold <br>i egen produksjon og reflektere over ansvar og etikk knyttet til <br>bruk og formidling av innhold i egen produksjon</li>
+					<hr>						
+					<li>utforske og beskrive sammenhenger mellom løsninger, <br> kundens behov og brukernes forutsetninger og erfaringer</li>
+					<hr>
+					<li>bruke programmering til å løse praktiske utfordringer <br> og til å fortelle interaktive historier</li>
+					<hr>
+					<li>utforske og anvende verktøy for datamodellering i <br>oppbygging av databaser</li>
+					<hr>		
+					<li>bruke oppmerkingsspråk og stilsett i ulike produksjoner	</li>				
+					<hr>		
+					<li>visualisere og utvikle konsepter og ideer tilpasset ulike plattformer</li>
+					<hr>		
+					<li>beskrive hvordan teknologi behandler data, algoritmer og statistikk	</li>
+					<hr>		
+					<li>bruke prinsipper for feilsøking og retting i arbeid med programmering</li>
+					<hr>		
+					<li>bruke dokumentasjon og dokumentere faglige prosesser</li>
+					<hr>		
+					<li>utforske og beskrive digitale trusler, <br> verdier og sårbarheter i samfunnet</li>
+					<hr>		
+					<li>gjøre rede for hvordan man behandler informasjon <br> og personopplysninger i tråd med gjeldende regelverk</li>
+					<hr>		
+					<li>vurdere, anbefale og kvalitetssikre tiltak som <br> reduserer risiko for uønsket spredning av data</li>
+				</ul>
+		</div>
+		
+	</div>
+</div>
+	<footer>
+		<p>&#169; 2020 Stine Jonassen Føyen </p>
+	</footer>
 </body>
 </html>
