--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<h1>Dette er Stine si nettside</h1>
 		<p>Her vil du finne litt forskjellig informasjon om fagene på linja Informasjonsteknologi og medieproduksjon. </p>
 	</div>
-	
+	<div style="min-height: 500px;">
 	<a href="teknologi.html">
 			<div class="box">
 				Teknologiforståelse 
@@ -39,6 +39,10 @@
 				YFF
 			</div>
 		</a>
-	
+
+	</div>
+	<footer>
+		<p>&#169; 2020 Stine Jonassen Føyen </p>
+	</footer>	
 </body>
 </html>
