--- a/konseptutvikling.html
+++ b/konseptutvikling.html
@@ -21,30 +21,18 @@
 		<h1>Konseptutvikling og programmering</h1>
 	
 	
-	<div class="grid-container">
+	<div class="grid-container-8">
 		<div class="grid-item">
-			<ul> 
-				<li> <a href="#regelverk"></a></li>
-					<ul>
-						<li> <a href="#personvern"></a></li>
-						<li> <a href="#personloven"> </a></li>
-						<li> <a href="https://www.datatilsynet.no/" target="_blank"></a> </li>
-					</ul>
-				
-			</ul>
+			<a href="quiz.html">
+				<div style="background-color: #013b3b; padding:20px;color:white;">
+					Quiz-program
+				</div>
+			</a>
 		</div>
 		<div class="grid-item">
-			<ul> 
-				<li> <a href="#regelverk"></a></li>
-					<ul>
-						<li> <a href="#personvern"></a></li>
-						<li> <a href="#personloven"> </a></li>
-						<li> <a href="https://www.datatilsynet.no/" target="_blank"></a> </li>
-					</ul>
-				
-			</ul>
+			
 		</div>
-	
+		
 		
 	</div>
 	  </div>
