--- a/quiz.html
+++ b/quiz.html
@@ -18,15 +18,14 @@
   		<a href="contact.html">Kontakt meg</a>
   
 	</div>
-	<div class="container">
-        <h1>Quiz-program</h1>
+	<div class="container" style="text-align: center;">
+        <h1>Quiz</h1>
         <p>Prøv ut denne quizen min!</p>
         <button onclick="startQuiz();" style="font-size: 20px; background-color: #013b3b; color:white; padding:20px 40px 20px 40px;">Start quiz</button>
 		
 	</div>
-	<div style="min-height: 500px;">
-	
-
+	<div style="min-height: 500px;text-align: center;">
+		<p id="svar"></p>
 	</div>
 	<footer>
 		<p>&#169; 2020 Stine Jonassen Føyen </p>
