--- a/quiz.html
+++ b/quiz.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Heim</title>
+	<title>Quiz</title>
 	<link rel="stylesheet" href="resources/css/index.css">
 	<link rel="stylesheet" href="resources/css/main.css">
 	<script src="resources/js/quiz.js"></script>
