--- a/konseptutvikling.html
+++ b/konseptutvikling.html
@@ -29,7 +29,11 @@
 			</a>
 		</div>
 		<div class="grid-item">
-			
+			<a href="dice.html">
+				<div style="background-color: #013b3b; padding:20px;color:white;">
+					Terning
+				</div>
+			</a>
 		</div>
 		
 		
