--- a/dice.html
+++ b/dice.html
@@ -22,7 +22,7 @@
 				<img src="" id="dice" height="50px;">
 			</div>
 			<div>
-				<button id="button" style="background-color: forestgreen; color: white;">Trill terning</button>
+				<button id="button" style="background-color: #015252; color: white;">Trill terning</button>
 			</div>
 		</div>
 
