--- a/konseptutvikling.html
+++ b/konseptutvikling.html
@@ -35,6 +35,14 @@
 				</div>
 			</a>
 		</div>
+
+		<div class="grid-item">
+			<a href="yatzy.html">
+				<div style="background-color: #013b3b; padding:20px;color:white;">
+					Yatzy ved 1 kast
+				</div>
+			</a>
+		</div>
 		
 		
 	</div>
