--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   		<a href="index.html">Heim</a>
   		<a href="teknologi.html">Teknologiforståelse</a>
 		<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
-  		<a href="contact.html">Kontakt meg</a>
+  		<a href="contact.html" target="_blank">Kontakt meg</a>
 	</div>
 	<div class="container">
 		<h1>Velkommen</h1>
