--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
   
 	</div>
 	
-	<div class="container">
+	<div class="container" style="min-height: 500px;">
 	<h1> Kontakt meg her: </h1>
 		<ul>
 			<li>Epost: <a href="mailto:stine.jonassen.foyen@vlfk.no">stine.jonassen.foyen@vlfk.no</a></li>
