--- a/konseptutvikling.html
+++ b/konseptutvikling.html
@@ -22,7 +22,7 @@
 		<img src="resources/images/snowball2.png" id="snowball" height="200px">
 	<div class="grid-container-8">
 		<div class="grid-item">
-			<a href="dice.html">
+			<a href="konseptutvikling/dice.html">
 				<div style="background-color: #013b3b; padding:20px;color:white;">
 					Terning
 				</div>
@@ -30,9 +30,17 @@
 		</div>
 
 		<div class="grid-item">
-			<a href="yatzy.html">
+			<a href="konseptutvikling/yatzy.html">
 				<div style="background-color: #013b3b; padding:20px;color:white;">
 					Yatzy ved 1 kast
+				</div>
+			</a>
+		</div>
+		
+		<div class="grid-item">
+			<a href="konseptutvikling/partikler.html">
+				<div style="background-color: #013b3b; padding:20px;color:white;">
+					Partikkelfest
 				</div>
 			</a>
 		</div>
