--- a/konseptutvikling/dice.html
+++ b/konseptutvikling/dice.html
@@ -3,17 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Terning</title>
-		<link rel="stylesheet" href="resources/css/main.css">
-		<script src="resources/js/myscript.js"></script>
+		<link rel="stylesheet" href="../resources/css/main.css">
+		<script src="../resources/js/myscript.js"></script>
 	</head>
 
 	<body>
 		<div class="scrollmenu">
-			<a href="index.html">Heim</a>
-			<a href="teknologi.html">Teknologiforståelse</a>
-			<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
+			<a href="../index.html">Heim</a>
+			<a href="../teknologi.html">Teknologiforståelse</a>
+			<a href="../konseptutvikling.html">Konseptutvikling og programmering</a>
 			<a href="#contact">YFF</a>
-			<a href="contact.html">Kontakt meg</a>
+			<a href="../contact.html">Kontakt meg</a>
   
 		</div>
 		<div style="text-align: center; min-height: 500px;">
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 
-		<script src="resources/js/dice.js"></script>
+		<script src="../resources/js/dice.js"></script>
 	</body>
 	<footer>
 		<p>&#169; 2020 Stine Jonassen Føyen </p>
