--- a/konseptutvikling/yatzy.html
+++ b/konseptutvikling/yatzy.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>5 like</title>
-        <link rel="stylesheet" href="resources/css/main.css">
+        <link rel="stylesheet" href="../resources/css/main.css">
         <style>
             .dice {
                 float:left;
@@ -16,11 +16,11 @@
 
 	<body>
 		<div class="scrollmenu">
-			<a href="index.html">Heim</a>
-			<a href="teknologi.html">Teknologiforståelse</a>
-			<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
+			<a href="../index.html">Heim</a>
+			<a href="../teknologi.html">Teknologiforståelse</a>
+			<a href="../konseptutvikling.html">Konseptutvikling og programmering</a>
 			<a href="#contact">YFF</a>
-			<a href="contact.html">Kontakt meg</a>
+			<a href="../contact.html">Kontakt meg</a>
   
 		</div>
 		<div style="text-align: center; min-height: 500px;">
@@ -50,7 +50,7 @@
 			</div>
 		</div>
 
-		<script src="resources/js/yatzy.js"></script>
+		<script src="../resources/js/yatzy.js"></script>
 	</body>
 	<footer>
 		<p>&#169; 2020 Stine Jonassen Føyen </p>
