--- a/teknologi.html
+++ b/teknologi.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="resources/css/main.css">
+	<link rel="stylesheet" href="konseptutvikling/resources/css/main.css">
 	<title>Teknologiforståelse</title>
 	<style>
 		.grid-container {
@@ -18,11 +18,11 @@
 
 <body>
 	<div class="scrollmenu">
-  		<a href="index.html">Heim</a>
-  		<a href="teknologi.html">Teknologiforståelse</a>
-		<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
+  		<a href="konseptutvikling/index.html">Heim</a>
+  		<a href="konseptutvikling/teknologi.html">Teknologiforståelse</a>
+		<a href="konseptutvikling/konseptutvikling.html">Konseptutvikling og programmering</a>
   		<a href="#contact">YFF</a>
-  		<a href="contact.html">Kontakt meg</a>
+  		<a href="konseptutvikling/contact.html">Kontakt meg</a>
   
 	</div>
 	<div class="container">
