--- a/teknologi.html
+++ b/teknologi.html
@@ -18,11 +18,11 @@
 
 <body>
 	<div class="scrollmenu">
-  		<a href="konseptutvikling/index.html">Heim</a>
+  		<a href="index.html">Heim</a>
   		<a href="teknologi.html">Teknologiforståelse</a>
-		<a href="konseptutvikling/konseptutvikling.html">Konseptutvikling og programmering</a>
+		<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
   		<a href="#contact">YFF</a>
-  		<a href="konseptutvikling/contact.html">Kontakt meg</a>
+  		<a href="contact.html">Kontakt meg</a>
   
 	</div>
 	<div class="container">
