--- a/konseptutvikling/partikler.html
+++ b/konseptutvikling/partikler.html
@@ -15,11 +15,11 @@
 </head>
 <body>
 	<div class="scrollmenu">
-  		<a href="index.html">Heim</a>
-  		<a href="teknologi.html">Teknologiforståelse</a>
-		<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
-  		<a href="#contact">YFF</a>
-  		<a href="contact.html">Kontakt meg</a>
+  		<a href="../index.html">Heim</a>
+  		<a href="../teknologi.html">Teknologiforståelse</a>
+		<a href="../konseptutvikling.html">Konseptutvikling og programmering</a>
+  		<a href="../#contact">YFF</a>
+  		<a href="../contact.html">Kontakt meg</a>
 	</div>
 	<h1>Partikkel-fest</h1>
     <canvas id="canvas" width="500" height="500"></canvas>
