--- a/index.html
+++ b/index.html
@@ -44,5 +44,12 @@
 	<footer>
 		<p>&#169; 2020 Stine Jonassen Føyen </p>
 	</footer>	
+	<script>
+		var i = 1; 
+		while(i<11) {
+			console.log(i); 
+			i++;
+		}
+	</script>
 </body>
 </html>
