--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   		<a href="teknologi.html">Teknologiforståelse</a>
 		<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
   		<a href="#contact">YFF</a>
-  		<a href="contact.html">Kontakt meg</a>
+  		<a href="contact.html">Kontakt meg tralalala</a>
   
 	</div>
 	
