--- a/index.html
+++ b/index.html
@@ -11,35 +11,39 @@
 
 <body>
 	<div class="scrollmenu">
-  		<a href="index.html">Heim</a>
-  		<a href="teknologi.html">Teknologiforståelse</a>
+		<a href="index.html">Heim</a>
+		<a href="learning/headings.html">HTML</a>
+		<a href="teknologi.html">Teknologiforståelse</a>
 		<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
-  		<a href="contact.html" target="_blank">Kontakt meg</a>
+		<a href="contact.html" target="_blank">Kontakt meg</a>
 	</div>
-	<div class="container">
-		<h1>Velkommen</h1>
-		<p>	Her vil du finne litt forskjellig informasjon om fagene på linja Informasjonsteknologi og 		medieproduksjon. <br>
-			Eg kjem også til å legge ut oppgåver og løysningsforslag etterkvart. <br>
-			Under faget "Konseptutikling og programmering", vil de finne ulike typar spel og program i bla JavaScript.		
-		</p>
-	</div>
-	<div style="min-height: 500px;">
-		<a href="teknologi.html">
-			<div class="box">
-				Teknologiforståelse 
-			</div>
-		</a>
-		<a href="konseptutvikling.html">
-			<div class="box">
-				Konseptutikling og programmering
-			</div>
-		</a>
-		<a href="yff.html">
-			<div class="box" style="margin-right: 0px;">
-				YFF
-			</div>
-		</a>
-	</div> 
+	<main style="min-height: 500px;">
+		<div class="container">
+			<h1>Velkommen</h1>
+			<p>	Her vil du finne litt forskjellig informasjon om fagene på linja Informasjonsteknologi og 		medieproduksjon. <br>
+				Eg kjem også til å legge ut oppgåver og løysningsforslag etterkvart. <br>
+				Under faget "Konseptutikling og programmering", vil de finne ulike typar spel og program i bla JavaScript.		
+			</p>
+		</div>
+		<div>
+			<a href="teknologi.html">
+				<div class="box">
+					Teknologiforståelse 
+				</div>
+			</a>
+			<a href="konseptutvikling.html">
+				<div class="box">
+					Konseptutikling og programmering
+				</div>
+			</a>
+			<a href="yff.html">
+				<div class="box" style="margin-right: 0px;">
+					YFF
+				</div>
+			</a>
+		</div> 
+		
+	</main>
 	<footer>
 		<p>&#169; 2020 Stine Jonassen Føyen </p>
 	</footer>	
