--- a/learning/headings.html
+++ b/learning/headings.html
@@ -8,10 +8,11 @@
     </head>
     <body >
         <div class="scrollmenu">
-            <a href="index.html">Heim</a>
-            <a href="html.html">HTML</a>
-            <a href="css.html">CSS</a>
-            <a href="js.html">JavaScript</a>
+            <a href="../index.html">Heim</a>
+            <a href="../learning/headings.html">HTML</a>
+            <a href="../teknologi.html">Teknologiforståelse</a>
+            <a href="../konseptutvikling.html">Konseptutvikling og programmering</a>
+            <a href="../contact.html" target="_blank">Kontakt meg</a>
         </div>
         <div class="leftNavigation">
             <h3>Innhold:</h3>
