--- a/learning/links.html
+++ b/learning/links.html
@@ -7,11 +7,12 @@
         <title>Links</title>
     </head>
     <body>
-        <div class="scrollmenu">
-            <a href="index.html">Heim</a>
-            <a href="html.html">HTML</a>
-            <a href="css.html">CSS</a>
-            <a href="js.html">JavaScript</a>
+       <div class="scrollmenu">
+        <a href="../index.html">Heim</a>
+        <a href="../learning/headings.html">HTML</a>
+        <a href="../teknologi.html">Teknologiforståelse</a>
+        <a href="../konseptutvikling.html">Konseptutvikling og programmering</a>
+        <a href="../contact.html" target="_blank">Kontakt meg</a>
         </div>
         <div class="leftNavigation">
             <h3>Innhold:</h3>
