--- a/examples/pseudoselektor.html
+++ b/examples/pseudoselektor.html
@@ -11,7 +11,7 @@
                color: darkorange; 
            }
            p::selection {
-               background-color: blue;
+               background-color: green;
                color: white; 
            }
            q::before {
