--- a/learning/headings.html
+++ b/learning/headings.html
@@ -21,6 +21,7 @@
             <h4><a href="../learning/links.html">Links</a></h4>
             <h4><a href="../learning/tables.html">Tabeller</a></h4>
             <h4><a href="../learning/images.html">Bilder</a></h4>
+            <h4><a href="../learning/pseudoselektor.html">Pseudoselektor</a></h4>
         </div>
         <div class="content">
             <h1>Headings - overskrifter</h1>
