--- a/learning/images.html
+++ b/learning/images.html
@@ -21,6 +21,7 @@
             <h4><a href="../learning/links.html">Links</a></h4>
             <h4><a href="../learning/tables.html">Tabeller</a></h4>
             <h4><a href="../learning/images.html">Bilder</a></h4>
+            <h4><a href="../learning/pseudoselektor.html">Pseudoselektor</a></h4>
         </div>
         <div class="content">
             <h1>Bilder</h1>
@@ -61,6 +62,7 @@
             </table>
             <div style="margin-bottom: 50px; ">
                 <h2>Box Shadow</h2>
+                <a href="../examples/shadows.html">Eksempel box-shadow</a>
                 <div style="display: flex;">
                     <div  class="image" style="margin-bottom: 50px;">
                         <img id="boxshadow" src="../resources/images/dog.jpg">
