--- a/learning/pseudoselektor.html
+++ b/learning/pseudoselektor.html
@@ -21,6 +21,7 @@
             <h4><a href="../learning/links.html">Links</a></h4>
             <h4><a href="../learning/tables.html">Tabeller</a></h4>
             <h4><a href="../learning/images.html">Bilder</a></h4>
+            <h4><a href="../learning/pseudoselektor.html">Pseudoselektor</a></h4>
         </div>
         <div class="content">
             <h1>Bilder</h1>
@@ -35,7 +36,8 @@
                 &lt;/style>     
                 </p>     
             </p>
-           
+            <a href="../examples/pseudoselektor.html">Eksempel pseudoselektor</a>
+            <a href="../examples/pseudoklasse.html">Eksempel pseudoklasse</a>
             <div class="example">
                 <h3>Eksempel:</h3> 
                 <p class="codeText">
