--- a/examples/shadows.html
+++ b/examples/shadows.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" href="../resources/css/learning.css">
     </head>
     <body>
-        <img id="dog" src="../resources/images/dog.jpg">
+        <div style="margin: 50px;">
+            <img id="dog" src="../resources/images/dog.jpg">
+        </div>
     </body>
     <footer></footer>
 </html>
